<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="wenjalan.questlogapp.activity.CreateUser">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorBackground"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userNameField"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorBackground"
            android:ems="10"
            android:hint="@string/hintUserName"
            android:inputType="textPersonName"
            android:textColor="@color/colorBackground"
            android:textColorHint="@color/colorBackgroundDark"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:onClick="createUser"
            android:text="@string/buttonCreateUser"
            android:textColor="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/userNameField"
            app:layout_constraintStart_toStartOf="@+id/userNameField"
            app:layout_constraintTop_toBottomOf="@+id/userNameField" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
