<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:alpha="1"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/textCreateQuest"
            android:textColor="@color/colorBackground"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:background="@null"
            android:onClick="navigationUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_white_24dp"
            tools:ignore="ContentDescription" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationBar"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:id="@+id/fieldScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fieldsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/titleConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/titleField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hintTitle"
                        android:inputType="text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBaseline_toBaselineOf="@+id/titlePrompt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/titlePrompt" />

                    <TextView
                        android:id="@+id/titlePrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/textTitle"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/descriptionConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/descriptionPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/textDescription"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/descriptionField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:ems="10"
                        android:hint="@string/hintDescription"
                        android:inputType="textMultiLine"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/descriptionPrompt"
                        app:layout_constraintTop_toTopOf="@+id/descriptionPrompt" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/tasksConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/taskFieldsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/placeholder"
                            android:layout_width="match_parent"
                            android:layout_height="128dp"
                            android:text="TASK FIELDS GO HERE"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/expConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/expPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/textExp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/expField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintBaseline_toBaselineOf="@+id/expPrompt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/expPrompt" />
                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/perkConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="384dp">

                    <Spinner
                        android:id="@+id/perkSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
